rename cird function cirdmatch
Signed-off-by: Jens Schmidt <jens.schmidt@eliatra.com>